# kakimasu

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/image/: CMakeLists.txt  grayscale8_image_usage.cc  rgb24_image_usage.cc
examples/io/: CMakeLists.txt  portable_anymap_io_usage.cc
include/kakimasu/: version.hh  version.hxx
include/kakimasu/image/: abstract_image.hh  bit_depth.hh  bitmap_image.hh  color.hh  grayscale8_color.hh  grayscale8_image.hh  image.hh  image.hxx  pixmap_image.hh  pixmap_image.hxx  rgb24_color.hh  rgb24_image.hh
include/kakimasu/io/: image_reader.hh  image_writer.hh  image_writer.hxx  portable_anymap_reader.hh  portable_anymap_writer.hh
src/: version.cc
src/image/: CMakeLists.txt  abstract_image.cc  bitmap_image.cc  grayscale8_color.cc  grayscale8_image.cc  image.cc  pixmap_image.cc  rgb24_color.cc  rgb24_image.cc
src/io/: CMakeLists.txt  image_reader.cc  image_writer.cc  portable_anymap_reader.cc  portable_anymap_writer.cc
tests/: CMakeLists.txt  rgb24_color_tests.cc  rgb24_image_tests.cc
